<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sky">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBackForecast"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Weather.Body"
        android:text="@string/back"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/inputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Weather.Body"
            android:text="@string/ai_message"
            android:textSize="23sp"
            android:textColor="#FFFFFF"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_input"
        android:padding="6dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/edtInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minLines="1"
            android:maxLines="6"
            android:gravity="top|start"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginStart="10dp"
            android:scrollbars="vertical"
            android:overScrollMode="ifContentScrolls"
            android:inputType="textMultiLine"
            android:imeOptions="flagNoEnterAction"
            android:background="@android:color/transparent"
            android:textAppearance="@style/TextAppearance.Weather.Body"
            android:hint="@string/ai_askinput"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:text="▲"
            android:backgroundTint="#808080"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>